hphp/test/zend/good/Zend/tests/bug43323.php.expectf

Fatal error: Class foo contains abstract method (bar) and must therefore be declared abstract or implement the remaining methods in %s/bug43323.php on line 6
